--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -3,8 +3,11 @@ name: Hello World
 on: push
 
 jobs:
-  hello-job
+  hello-job:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
       - name: Echo text
         run: echo "Hello, world!"  
